# cinema

./: pyproject.toml
admin_panel/config/: .env.example  settings.py
admin_panel/docs/: add_fake_data.py  films.ddl
admin_panel/movies/: models.py
admin_panel/movies/locale/en/LC_MESSAGES/: django.mo
admin_panel/movies/migrations/: 0002_create_tables.py  0003_add_enums.py
admin_panel/sqlite_to_postgres_etl/: .env.example  README.md  logger.py  main.py
admin_panel/sqlite_to_postgres_etl/etl_dataclasses/: __init__.py  film.py  genre.py  genre_film.py  person.py  person_film.py
admin_panel/sqlite_to_postgres_etl/extract/: __init__.py  extract.py
admin_panel/sqlite_to_postgres_etl/load/: __init__.py  load.py
admin_panel/sqlite_to_postgres_etl/transform/: __init__.py  transform.py
config/components/: database.py
docs/: .$db_schema.drawio.bkp  db_schema.drawio  docker.txt  films.ddl  info.txt
movies/: admin.py  apps.py  models.py
movies/locale/en/LC_MESSAGES/: django.po
movies/locale/ru/LC_MESSAGES/: django.mo  django.po
movies/migrations/: 0001_create_content_schema.py  0002_create_tables.py
