[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["yaaspichikhin <yaaspichikhin@rt-dc.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^22.0.0"
psycopg2-binary = "^2.9.9"
django = "^5.0.1"
python-dotenv = "^1.0.0"
django-split-settings = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
